# zephyr-app-ufsm00292

./: CMakeLists.txt  [HAL] Bluetooth V4  [HAL] Bluetooth V5  [HAL] Bluetooth v6  [HAL] Entrega Final P1  [HAL] Entrega Final Slides P2  [HAL] Entrega Final Slides P4  [HAL] Entrega Slides Final P3  [HAL]Bluetooth V2  [HAL]Bluetooth V3
.venv-311/: pyvenv.cfg
APPJoaoReal/: README.md
APPJoaoReal/client/: CMakeLists.txt  overlay-802154.conf
APPJoaoReal/client/boards/: samr21_xpro.conf
APPJoaoReal/client/src/: common.h  echo-client.c  meu_sensor.c  meu_sensor.h  udp.c
APPJoaoReal/server/: CMakeLists.txt  overlay-802154.conf  prj.conf
APPJoaoReal/server/boards/: samr21_xpro.conf
APPJoaoReal/server/src/: common.h  echo-server.c  udp.c
APP_NICOLAS/: README.txt
APP_gfschuster/: CMakeLists.txt  README.md  prj.conf  qemu_output.txt  run_APP_local.ps1  run_APP_qemu_log.ps1
APP_gfschuster/include/: app.h
APP_gfschuster/interface_app/: gui_monitor_file.py
APP_gfschuster/src/: data_center.c  main.c  sensor_humidity.c  sensor_lux.c  sensor_temp.c
APP_jpsouto/: CMakeLists.txt  README.md  prj.conf  viewer.py  viewer_drone.py
AppJaqueline/: CMakeLists.txt  overlay.conf  prj.conf
App_Viero/: CMakeLists.txt  README.md  prj.conf  samr21_xpro.overlay  sensor_visualizer.html
AugustoBalestera_sensor_luminosidade/: CMakeLists.txt  (+1 more)
projeto-final/: CMakeLists.txt  RELATÓRIO.md  prj.conf
projeto-final/boards/: samd21_xplained_pro.overlay
projeto-final/documentacao/semana-5/: README.md
projeto-final/documentacao/semana-6/: README.md
projeto-final/documentacao/semana-7/: README.md
projeto-final/drivers/sensors/: temperature_at30tse752a.c
projeto-final/src/: main.c
(+115 files in other folders)
